--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,77 @@ html{
   padding-top: 15vh;
 
 }
+
+/* 6.1 Profile page */
+
+.Profile-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color:rgb(255,242,225) ;
+  height: 100%;
+  padding: 70px;
+}
+
+.profile-div{
+  margin: auto;
+  border-radius: 20px;
+  
+}
+
+.profile-card {
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.537);
+  max-width: 500px;
+  margin: auto;
+  text-align: center;
+  background-color:rgb(234,216,192);
+  
+}
+
+.profile-title {
+  color: grey;
+  font-size: 18px;
+}
+
+.profile-button{
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+  
+}
+
+.profile-card a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+.profile-button:hover,.profile-card a:hover {
+  background-color: #0000008d;
+}
+.profile-card img{
+  width: 100%;
+}
+
+@media (max-width: 642px) {
+  .Profile-container{
+    display: flex;
+    flex-direction: column;
+    background-color:rgb(255,242,225) ;
+    height: 100%;
+    padding: 50px;
+  }
+}
+
+.details-edit-button{
+ border: 1px solid black;
+ border-radius: 5px;
+ background-color:rgb(251, 214, 167) ;
+ 
+}
