--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 10px;
   padding-bottom:7px;
-  background-color: rgb(167,146,118);
+  background-color: rgba(213, 177, 131, 0.88);
 }
 
 .nav-header{
@@ -48,6 +48,7 @@ a{
   border-radius:4px;
   margin-left:10px;
   padding: 0.5rem 1rem;
+  height: 40px;
   
 }
 button:hover{
@@ -60,6 +61,7 @@ button:hover{
   .menu-toggle {
       display: none;
   }
+
 }
 
 /* Responsive Navbar CSS for phones */
@@ -67,7 +69,7 @@ button:hover{
   .Navbar {
       flex-direction: column;
       align-items: flex-start;
-      padding: 10px 5px;
+      padding: 5px 5px;
   }
 
   .Navbar-list {
@@ -94,6 +96,7 @@ button:hover{
 
   .menu-toggle {
       display: block;
+      align-items: center;
       cursor: pointer;
       color: black;
       font-size: 20px;
@@ -102,6 +105,9 @@ button:hover{
       padding: 10px;
       width: 100%;
       text-align: left;
+  }
+  .menu-toggle svg{
+    margin-top: 0;
   }
 }
 
@@ -318,4 +324,123 @@ html{
     width: 100%;
     
   }
+}
+
+/* 7. Note Fusion */
+
+.note-fusion{
+  padding: 50px;
+  background-color:rgb(255,242,225) ; 
+  text-align: center;
+}
+
+/* 7.1 Note Fusion Search component */
+
+.notes-search-header{
+  text-align: center;
+   font-family: cursive;
+}
+#note-search-bar{
+  border-radius: 30px;
+  width:340px;
+  height: 30px;
+  background-color: rgba(234, 182, 114, 0.282);
+  margin-top: 10px;
+  border: 1px solid rgba(128, 128, 128, 0.354);
+}
+
+#note-search-bar::placeholder{
+  text-align: center;
+}
+
+
+/* 7.2 search results */
+
+.note-serach-results{
+  list-style: none;
+ 
+  margin-top: 40px;
+  
+}
+
+.notes-list{
+  display: grid;
+  list-style: none;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns of equal width */
+  gap: 20px; /* Space between the grid items */
+  padding: 20px;
+}
+
+
+.notes-item {
+  flex: 1 1 calc(33.333% - 20px); /* Each item takes up 1/3 of the container's width */
+  background-color: #f4f4f4;
+  padding: 20px;
+  height: 100px;
+  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-sizing: border-box; /* Include padding and border in the width calculation */
+  overflow: scroll;
+  border-radius: 30px;
+  background-color: burlywood;
+  box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.3);
+  border: 0px;
+}
+
+.notes-item:hover{
+  background-color: rgba(222, 184, 135, 0.701);
+}
+
+.notes-title{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 160%;
+}
+.notes-description{
+  color: rgba(61, 60, 60, 0.794);
+}
+
+.add-notes{
+  border: 0px;
+  background-color: burlywood;
+  border-radius: 10px;
+  height: 30px;
+  margin-left:5px;
+}
+.add-notes:hover{
+  background-color: rgba(222, 184, 135, 0.421);
+}
+
+@media (max-width: 642px) {
+  .notes-list{
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    gap: 20px; /* Space between the grid items */
+    padding: 5px;
+  }
+
+
+  .notes-item {
+    flex: 1 1 calc(33.333% - 20px); /* Each item takes up 1/3 of the container's width */
+    background-color: #f4f4f4;
+    padding: 20px;
+    height: 100px;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box; /* Include padding and border in the width calculation */
+    overflow: scroll;
+    border-radius: 30px;
+    background-color: burlywood;
+    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.3);
+    border: 0px;
+  }
+  
+  #note-search-bar{
+    width:340px;
+    margin-bottom: 20px;
+
+  }
+
 }
