--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,126 @@ html{
   background-color: rgb(255,242,225);
 }
 
+/* 3.2 event component */
+.event-container{
+  text-align: center;
+  padding: 3vh;
+  border-bottom: 1px solid #999898;
+}
+
+.event-card-container{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  overflow: scroll;
+}
+
+.event-container-header{
+  text-align: center;
+  align-items: center;
+  font-size:35px ;
+  padding:10px;
+}
+
+#event-search-bar{
+  text-align: center;
+  font-size: 20px;
+  border-radius: 30px;
+  width:200px;
+  height: 30px;
+  background-color: rgba(234, 182, 114, 0.282);
+  margin-top: 10px;
+  border: 1px solid rgba(128, 128, 128, 0.354);
+}
+.event-card {
+  width: 320px;
+  border-width: 1px;
+  border-color: rgba(219, 234, 254, 1);
+  border-radius: 1rem;
+  background-color: rgb(240, 205, 161);
+  padding: 1rem;
+
+}
+
+.event-card-list-item{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.event-header {
+  display: flex;
+  align-items: center;
+  grid-gap: 1rem;
+  gap: 1rem;
+}
+
+.event-icon {
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  background-color: rgba(96, 165, 250, 1);
+  padding: 0.5rem;
+  color: rgba(255, 255, 255, 1);
+}
+
+.event-icon svg {
+  height: 1rem;
+  width: 1rem;
+}
+
+.event-alert {
+  font-weight: 600;
+  font-size: 1.3rem;
+  color: rgb(23, 23, 23);
+}
+
+.event-message {
+  margin-top: 1rem;
+  color: rgb(113, 113, 116);
+  max-height: 200px;
+  overflow: scroll;
+}
+
+.event-actions {
+  margin-top: 1.5rem;
+}
+
+.event-actions a {
+  text-decoration: none;
+}
+
+.event-mark-as-read, .event-read {
+  display: inline-block;
+  border-radius: 0.5rem;
+  width: 100%;
+  padding: 0.75rem 1.25rem;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
+}
+
+.event-read {
+  background-color: rgb(227, 177, 112);
+  color: rgba(255, 255, 255, 1);
+}
+.event-read:hover{
+  background-color: rgba(246, 182, 98, 0.969)
+}
+.event-mark-as-read {
+  margin-top: 0.5rem;
+  background-color: rgba(249, 250, 251, 1);
+  color: rgba(107, 114, 128, 1);
+  transition: all .15s ease;
+}
+
+.event-mark-as-read:hover {
+  background-color: rgb(230, 231, 233);
+}
+
+
+
 /* 4.1 Signup page */
 
 .signupPage{
@@ -137,7 +257,7 @@ html{
 }
 
 .form-container{
-  background-color:rgba(231, 212, 187, 0.547) ;
+  background-color:rgb(249, 216, 172) ;
   padding: 30px;
   border-radius: 30px;
   margin: auto;
